--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,12 @@ ScrapeAndSpreddit
 v5_logfile.txt
 v5_response_time_log.txt
 sand.py
-Chatbot/text_prompt.txt
-Chatbot/codex_prompt.txt
-Chatbot/codex_response.txt
+Chatbot/*
 chatbot_dev.py
 tansecrets.py
 *.txt
 *.png
+image_generation.py
+__pycache__
+.history
+Chatbot/.DS_Store
