--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-mysecrets.py
-Chatbot/Inactive Logfiles
-ScrapeAndSpreddit
-v5_logfile.txt
-v5_response_time_log.txt
-sand.py
+.gitignore
+.gitattributes
+.DS_Store
+.history
 Chatbot/*
-chatbot_dev.py
+ScrapeAndSpreddit/*
+sand.py
 tansecrets.py
 *.txt
-*.png
 image_generation.py
 __pycache__
-.history
 Chatbot/.DS_Store
